--- a/NewWeb/Views/First/FirstView.cshtml
+++ b/NewWeb/Views/First/FirstView.cshtml
@@ -10,6 +10,7 @@
     <div class="container">
 
     <h1>Now we're serving views! 🎉</h1>
+    <a href="form">Form</a>
     @{
         List<string> names = new(){"Bob","Alice","Alex Miller"};
         foreach (string name in names)
