fixed all pets button (previously said "Form")

--- a/PetParty/Views/Home/Index.cshtml
+++ b/PetParty/Views/Home/Index.cshtml
@@ -26,5 +26,5 @@
         </div>
         <button class="btn btn-primary">Submit</button>
     </form>
-    <a class="btn btn-primary mt-3" asp-action="AllPets" asp-controller="Home">Form</a>
+    <a class="btn btn-primary mt-3" asp-action="AllPets" asp-controller="Home">Show All Pets</a>
 </div>
